Update spring boot and jdk version